@@ -59,6 +59,14 @@ compose.desktop {
                 "java.net.http",   // <-- REQUIRED for Ktor Java engine
                 "jdk.crypto.ec"    // <-- TLS with EC certs
             )
+            jvmArgs(
+                "--add-modules=jdk.crypto.cryptoki",
+                "--add-exports=java.base/sun.security.pkcs11=ALL-UNNAMED",
+                "--add-modules=jdk.crypto.cryptoki",
+                "-Xmx512m",
+                "-XX:ErrorFile=" + System.getProperty("user.home") + "/hs_err_pid%p.log",
+                "-XX:+ShowCodeDetailsInExceptionMessages"
+            )
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "NordbilPay"
             packageVersion = "1.0.0"
